# PyLinkAgent

./: .gitignore  COMPLETE_VERIFICATION_GUIDE.md  COMPLETION_SUMMARY.md  CONFIG_VERIFICATION_REPORT.md  CONTROLLER_COMPLETENESS_CHECK.md  CONTROLLER_IMPLEMENTATION_REPORT.md  CONTROLLER_QUICKSTART.md  CORE_FUNCTION_COMPARISON.md  DELIVERY_CHECKLIST.md  DELIVERY_SUMMARY.md  DEPENDENCY_ANALYSIS.md  DEPENDENCY_PRIORITY_ANALYSIS.md  DEPLOYMENT_GUIDE.md  END_TO_END_VERIFICATION.md  FLEXIBLE_CONFIG_SUMMARY.md  FUNCTION_COMPARISON.md  GAP_ANALYSIS.md  INNER_NETWORK_VERIFICATION_GUIDE.md  INTERNAL_NETWORK_VERIFICATION_GUIDE.md  JAVA_AGENT_ALIGNMENT_REPORT.md  JAVA_DEEP_ANALYSIS_REPORT.md  MANAGEMENT_INTEGRATION_VERIFY_REPORT.md  Makefile  P0_IMPLEMENTATION_REPORT.md  P0_P1_SUMMARY.md  P0_VERIFICATION_SUMMARY.md  P1_VERIFICATION_SUMMARY.md  PRADAR_IMPLEMENTATION_REPORT.md  QUICKSTART_CONFIG.md  QUICK_START.md  README.md  REFACTOR_REPORT.md  SANDBOX_CHECKLIST.md  SHADOW_CONFIG_GUIDE.md  SHADOW_DB_IMPLEMENTATION_SUMMARY.md  SHADOW_DB_VERIFICATION_REPORT.md  TAKIN_WEB_INTEGRATION.md  VERIFICATION_REPORT.md  demo_app.py  demo_app_simple.py  (+24 more)
config/: default.yaml  zk_config.example.json
database/: end_to_end_init.sql  pylinkagent_tables.sql
demo/: demo_app.py  quick_test.py
docs/: APPLICATION_REGISTRY.md  COMPREHENSIVE_VERIFICATION_GUIDE.md  HEADERS_CONFIGURATION.md  HEADERS_FEATURE_SUMMARY.md  HEARTBEAT_REQUEST_FORMAT_FIX.md  INTERNAL_NETWORK_VERIFICATION.md  SHADOW_ROUTING_GUIDE.md  WATCH_FIX.md  ZK_CLIENT_PATH_REGISTER.md  ZK_LOG_SERVER_DISCOVERY.md  ZOOKEEPER_DATA_FLOW.md  ZOOKEEPER_INTEGRATION.md  architecture.md  intranet_validation_checklist.md  module-development.md  quickstart.md  verification.md
examples/: shadow_config_usage.py
instrument_modules/: __init__.py  base.py
instrument_simulator/: __init__.py  module_loader.py  module_registry.py  simulator.py
pylinkagent/: __init__.py  auto_bootstrap.py  bootstrap.py  cli.py  config.py  http_server_interceptor.py  logger.py  runtime_snapshot.py  version.py
sandbox/: Dockerfile  Dockerfile.test  README.md  VALIDATION_GUIDE.md  docker-compose.yml
scripts/: README.md  check_management_service.py  diagnose.py  (+26 more)
(+92 files in other folders)
